Add very slow QuickSort implementation